--- a/css/custom.css
+++ b/css/custom.css
@@ -3,7 +3,7 @@ html{
 }
 
 .navbar{
-    border-radius:0;   
+    border-radius:0;
 }
 
 .navbar-brand{
@@ -42,12 +42,12 @@ p{
 	cursor: pointer;
 }
 
-.filterrolelist{
+.filterrolelist, .questionrolelist{
 	list-style-type: none;
 	font-size: 1.5em;
 }
 
-.filteredrole{
+.filteredrole, .questionfilteredrole{
 	cursor: pointer;
 }
 
