--- a/css/custom.css
+++ b/css/custom.css
@@ -2,6 +2,18 @@ html{
     overflow-y: scroll;
 }
 
+body.modal-open {
+    overflow: auto;
+}
+body.modal-open[style] {
+    padding-right: 0px !important;
+}
+
+.modal::-webkit-scrollbar {
+    width: 0 !important; /*removes the scrollbar but still scrollable*/
+    /* reference: http://stackoverflow.com/a/26500272/2259400 */
+}
+
 .navbar{
     border-radius:0;
 }
